--- a/security/spiped/Makefile
+++ b/security/spiped/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2015/02/22 14:26:47 wiedi Exp $
+# $NetBSD: Makefile,v 1.13 2015/03/04 16:39:41 wiedi Exp $
 
 DISTNAME=	spiped-1.5.0
 CATEGORIES=	net security
@@ -9,6 +9,7 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.tarsnap.com/spiped/
 COMMENT=	Tool for creating symmetrically encrypted and authenticated pipes
 LICENSE=	2-clause-bsd
+USE_LANGUAGES=	c99
 
 MAKE_FLAGS+=	BINDIR=${DESTDIR}${PREFIX}/bin
 MAKE_FLAGS+=	MAN1DIR=${DESTDIR}${PREFIX}/${PKGMANDIR}/man1
