--- a/lang/lua52/Makefile
+++ b/lang/lua52/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2014/10/09 14:06:38 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2015/03/05 13:39:20 ryoon Exp $
 
 DISTNAME=	lua-${LUA_VERSION}
 PKGNAME=	lua52-${LUA_VERSION}
@@ -30,6 +30,8 @@ INSTALLATION_DIRS+=	lib/pkgconfig share/doc/lua-5.2
 .if ${OPSYS} == "FreeBSD"
 BUILD_TARGET=	freebsd
 .elif !empty(OPSYS:M*BSD*) || ${OPSYS} == "DragonFly"
+BUILD_TARGET=	bsd
+.elif ${OPSYS} == "Cygwin"
 BUILD_TARGET=	bsd
 .elif ${OPSYS} == "Linux"
 BUILD_TARGET=	linux
