--- a/mail/thunderbird/Makefile
+++ b/mail/thunderbird/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.145 2015/03/06 22:27:22 ryoon Exp $
+# $NetBSD: Makefile,v 1.146 2015/03/07 10:25:58 ryoon Exp $
 
 DISTNAME=	# empty
 PKGNAME=	thunderbird-${TB_VER}
@@ -14,6 +14,8 @@ DISTFILES=	thunderbird-${TB_VER}.source.tar.bz2
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.mozillamessaging.com/en-US/thunderbird/
 COMMENT=	Organize, secure and customize your mail
+
+DIST_SUBDIR=	${PKGNAME_NOREV}
 
 USE_TOOLS+=	unzip pax
 WRKSRC=		${WRKDIR}/comm-esr31
