--- a/archivers/par2/Makefile
+++ b/archivers/par2/Makefile
@@ -1,17 +1,16 @@
-# $NetBSD: Makefile,v 1.19 2015/01/25 07:46:50 mef Exp $
+# $NetBSD: Makefile,v 1.20 2015/03/07 14:25:48 tnn Exp $
 
-DISTNAME=		v0.6.11
-PKGNAME=		par2-${DISTNAME:S/v//}
+DISTNAME=		par2-0.6.11
 CATEGORIES=		misc
-MASTER_SITES=		https://github.com/BlackIkeEagle/par2cmdline/archive/
+USE_GITHUB=		yes
+GH_ACCOUNT=		BlackIkeEagle
+GH_PROJECT=		par2cmdline
+GH_TAGNAME=		v${PKGVERSION_NOREV}
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		https://github.com/BlackIkeEagle/par2cmdline
 COMMENT=		PAR 2.0 compatible file verification and repair tool
 LICENSE=		gnu-gpl-v2
-
-DIST_SUBDIR=		par2
-WRKSRC=			${WRKDIR}/par2cmdline-${DISTNAME:S/v//}
 
 USE_LANGUAGES=		c c++
 USE_PKGLOCALEDIR=	yes
