--- a/lang/lua52/Makefile
+++ b/lang/lua52/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2015/03/05 13:39:20 ryoon Exp $
+# $NetBSD: Makefile,v 1.8 2015/03/08 10:55:19 alnsn Exp $
 
 DISTNAME=	lua-${LUA_VERSION}
 PKGNAME=	lua52-${LUA_VERSION}
-PKGREVISION=	1
 CATEGORIES=	lang
 MASTER_SITES=	http://www.lua.org/ftp/ \
 		http://www.tecgraf.puc-rio.br/lua/ftp/
