--- a/sysutils/ruby-facter/Makefile
+++ b/sysutils/ruby-facter/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.23 2015/02/13 13:55:58 taca Exp $
+# $NetBSD: Makefile,v 1.24 2015/03/08 16:54:17 taca Exp $
 
 DISTNAME=	facter-2.4.1
 PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME}
+PKGREVISINO=	1
 CATEGORIES=	sysutils
 
 MAINTAINER=	tonnerre@NetBSD.org
