--- a/www/ap-php/Makefile
+++ b/www/ap-php/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.30 2014/06/13 14:31:19 fhajny Exp $
+# $NetBSD: Makefile,v 1.31 2015/03/08 17:03:23 taca Exp $
 
 PKGNAME=		${APACHE_PKG_PREFIX}-${PHP_PKG_PREFIX}-${PHP_BASE_VERS}
-PKGREVISION=		1
+PKGREVISION=		2
 COMMENT=		Apache (${PKG_APACHE}) module for ${PKG_PHP}
 
 CONFLICTS=		ap-php-[0-9]*
