--- a/misc/libreoffice4/Makefile
+++ b/misc/libreoffice4/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.62 2015/03/03 21:39:13 ryoon Exp $
+# $NetBSD: Makefile,v 1.63 2015/03/09 09:02:20 wiz Exp $
 
 VERREL=		4.4.1
 VERRC=		2
 VER=		${VERREL}.${VERRC}
 DISTNAME=	libreoffice-${VER}
 PKGNAME=	libreoffice4-${VER}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	misc
 MASTER_SITES=	http://download.documentfoundation.org/libreoffice/src/${VERREL}/
 EXTRACT_SUFX=	.tar.xz
