--- a/print/cups-filters/Makefile
+++ b/print/cups-filters/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.16 2015/03/01 15:17:53 wiz Exp $
+# $NetBSD: Makefile,v 1.17 2015/03/09 09:02:20 wiz Exp $
 
 DISTNAME=	cups-filters-1.0.66
+PKGREVISION=	1
 CATEGORIES=	print
 MASTER_SITES=	http://openprinting.org/download/cups-filters/
 EXTRACT_SUFX=	.tar.xz
