--- a/archivers/par2/Makefile
+++ b/archivers/par2/Makefile
@@ -1,11 +1,10 @@
-# $NetBSD: Makefile,v 1.20 2015/03/07 14:25:48 tnn Exp $
+# $NetBSD: Makefile,v 1.21 2015/03/09 12:14:44 tnn Exp $
 
 DISTNAME=		par2-0.6.11
 CATEGORIES=		misc
-USE_GITHUB=		yes
-GH_ACCOUNT=		BlackIkeEagle
-GH_PROJECT=		par2cmdline
-GH_TAGNAME=		v${PKGVERSION_NOREV}
+MASTER_SITES=		${MASTER_SITE_GITHUB:=BlackIkeEagle/}
+GITHUB_PROJECT=		par2cmdline
+GITHUB_TAG=		v${PKGVERSION_NOREV}
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		https://github.com/BlackIkeEagle/par2cmdline
