--- a/devel/ruby-debugger-ruby_core_source/Makefile
+++ b/devel/ruby-debugger-ruby_core_source/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2015/02/04 13:37:18 taca Exp $
+# $NetBSD: Makefile,v 1.2 2015/03/10 16:40:18 taca Exp $
 
 DISTNAME=	debugger-ruby_core_source-1.3.8
 CATEGORIES=	devel
@@ -8,7 +8,7 @@ HOMEPAGE=	https://github.com/cldwalker/debugger-ruby_core_source
 COMMENT=	Provide Ruby core source files
 LICENSE=	mit
 
-RUBY_VERSION_SUPPORTED=	193 200 21
+RUBY_VERSION_SUPPORTED=	193
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
