[onigmo] Update to 6.0.0

--- a/textproc/onigmo/Makefile
+++ b/textproc/onigmo/Makefile
@@ -1,16 +1,13 @@
 # $NetBSD$
 #
 
-DISTNAME=	Onigmo-5.15.0
-PKGNAME=	${DISTNAME:tl}
+DISTNAME=	onigmo-6.0.0
 CATEGORIES=	textproc
-MASTER_SITES=	https://github.com/k-takata/Onigmo/archive/
+MASTER_SITES=	https://github.com/k-takata/Onigmo/releases/download/Onigmo-${PKGVERSION_NOREV}/
 
 HOMEPAGE=	https://github.com/k-takata/Onigmo/
 COMMENT=	Regular expressions library
 LICENSE=	2-clause-bsd
-
-CONFLICTS+=	oniguruma-[0-9]*
 
 GNU_CONFIGURE=	yes
 USE_LIBTOOL=	yes
@@ -18,8 +15,6 @@ USE_TOOLS+=	gmake
 
 TEST_TARGET=	atest
 
-PKGCONFIG_OVERRIDE+=	oniguruma.pc.in
-
-WRKSRC=		${WRKDIR}/Onigmo-${DISTNAME}
+PKGCONFIG_OVERRIDE+=	onigmo.pc.in
 
 .include "../../mk/bsd.pkg.mk"
