[ocaml-findlib] Fix to raw_spacetime only on LP64 archies

--- a/devel/ocaml-findlib/Makefile
+++ b/devel/ocaml-findlib/Makefile
@@ -53,6 +53,12 @@ SUBST_STAGE.pathes=	post-install
 SUBST_FILES.pathes=	${DESTDIR}${PREFIX}/lib/ocaml/site-lib/findlib/Makefile.config
 SUBST_SED.pathes=	-e 's,^\(OCAML_CORE_BIN=\).*,\1'${PREFIX:Q}/bin','
 
+PLIST_VARS+=	LP64
+
+.if !empty(LP64PLATFORMS:S/*-*-//:M${MACHINE_ARCH})
+PLIST.LP64=yes
+.endif
+
 do-test:
 	${RUN} cd ${WRKSRC}; ${SH} itest
 
