[gspell] Enable vala bindings

--- a/textproc/gspell/Makefile
+++ b/textproc/gspell/Makefile
@@ -21,6 +21,8 @@ PKGCONFIG_OVERRIDE+=	gspell.pc.in
 .include "../../devel/glib2/buildlink3.mk"
 BUILDLINK_DEPMETHOD.gobject-introspection+=	build
 .include "../../devel/gobject-introspection/buildlink3.mk"
+BUILDLINK_DEPMETHOD.vala+=	build
+.include "../../lang/vala/buildlink3.mk"
 .include "../../textproc/enchant/buildlink3.mk"
 .include "../../textproc/iso-codes/buildlink3.mk"
 .include "../../x11/gtk3/buildlink3.mk"
