[cyrus-imapd30] Update to 3.0.0rc1

--- a/mail/cyrus-imapd30/Makefile
+++ b/mail/cyrus-imapd30/Makefile
@@ -1,7 +1,7 @@
 # $NetBSD$
 
-DISTNAME=	cyrus-imapd-3.0.0-beta6
-PKGNAME=	${DISTNAME:S/-beta/beta/}
+DISTNAME=	cyrus-imapd-3.0.0-rc1
+PKGNAME=	${DISTNAME:S/-rc/rc/}
 CATEGORIES=	mail
 MASTER_SITES=	http://cyrusimap.org/releases/
 
