--- a/inputmethod/sunpinyin/Makefile.common
+++ b/inputmethod/sunpinyin/Makefile.common
@@ -4,10 +4,10 @@
 # used by inputmethod/scim-sunpinyin/Makefile
 # used by inputmethod/xsunpinyin/Makefile
 
-DISTNAME=	sunpinyin-cf1810220bf3d3f5a8b990b0a9d3e9df21b1942c
-PKGNAME=	sunpinyin-2.0.4beta20150706
+DISTNAME=	sunpinyin-3.0.0-rc1
+PKGNAME=	${DISTNAME:S/-rc/rc/}
 CATEGORIES=	inputmethod chinese
-MASTER_SITES=	-https://github.com/sunpinyin/sunpinyin/archive/cf1810220bf3d3f5a8b990b0a9d3e9df21b1942c.tar.gz
+MASTER_SITES=	-https://github.com/sunpinyin/sunpinyin/archive/v3.0.0-rc1.tar.gz
 
 DISTINFO_FILE=		${.CURDIR}/../../inputmethod/sunpinyin/distinfo
 PATCHDIR=		${.CURDIR}/../../inputmethod/sunpinyin/patches
