[kcm-fcitx-kde4] Move last KDE4 version of kcm-fcitx here

--- a/inputmethod/Makefile
+++ b/inputmethod/Makefile
@@ -74,6 +74,7 @@ SUBDIR+=	input-pad
 SUBDIR+=	ja-freewnn-lib
 SUBDIR+=	ja-freewnn-server
 SUBDIR+=	kasumi
+SUBDIR+=	kcm-fcitx-kde4
 SUBDIR+=	kcm-fcitx
 SUBDIR+=	kimera
 SUBDIR+=	kimera-tomoe-gtk
