zstd: change to control pkgconfig install path with make flags

--- a/archivers/zstd/Makefile
+++ b/archivers/zstd/Makefile
@@ -16,6 +16,7 @@ PKGCONFIG_OVERRIDE+=	lib/libzstd.pc.in
 MAKE_FLAGS=		MANDIR=${PREFIX}/${PKGMANDIR}
 MAKE_FLAGS+=		mandir=${PREFIX}/${PKGMANDIR}
 MAKE_FLAGS+=		INSTALL=${INSTALL:Q}
+MAKE_FLAGS+=		PKGCONFIGDIR=${PREFIX}/lib/pkgconfig
 
 BUILD_TARGET=		allmost
 TEST_TARGET=		test
