cyrus-sasl: update to 2.1.27

--- a/security/cy2-srp/Makefile
+++ b/security/cy2-srp/Makefile
@@ -1,6 +1,6 @@
 # $NetBSD$
 
-PKGNAME=	${DISTPKGNAME:S/cyrus-sasl/cy2-otp/}
+PKGNAME=	${DISTNAME:S/cyrus-sasl/cy2-otp/}
 COMMENT=	Cyrus SASL SRP authentication plugin
 SASL_PLUGIN=	yes
 
