--- a/security/cy2-crammd5/Makefile
+++ b/security/cy2-crammd5/Makefile
@@ -1,6 +1,6 @@
 # $NetBSD: Makefile,v 1.11 2018/04/17 01:57:18 christos Exp $
 
-PKGNAME=	${DISTPKGNAME:S/cyrus-sasl/cy2-crammd5/}
+PKGNAME=	${DISTNAME:S/cyrus-sasl/cy2-crammd5/}
 COMMENT=	Cyrus SASL CRAM-MD5 authentication plugin
 SASL_PLUGIN=	yes
 
