--- a/security/cy2-ldapdb/Makefile
+++ b/security/cy2-ldapdb/Makefile
@@ -1,6 +1,6 @@
 # $NetBSD: Makefile,v 1.13 2018/04/17 01:57:18 christos Exp $
 
-PKGNAME=	${DISTPKGNAME:S/cyrus-sasl/cy2-ldapdb/}
+PKGNAME=	${DISTNAME:S/cyrus-sasl/cy2-ldapdb/}
 COMMENT=	Cyrus SASL LDAPDB authentication plugin
 SASL_PLUGIN=	yes
 
