--- a/security/cy2-ntlm/Makefile
+++ b/security/cy2-ntlm/Makefile
@@ -1,6 +1,6 @@
 # $NetBSD: Makefile,v 1.29 2018/04/17 01:57:18 christos Exp $
 
-PKGNAME=	${DISTPKGNAME:S/cyrus-sasl/cy2-ntlm/}
+PKGNAME=	${DISTNAME:S/cyrus-sasl/cy2-ntlm/}
 COMMENT=	Cyrus SASL NTLM authentication plugin
 SASL_PLUGIN=	yes
 
