--- a/security/cy2-scram/Makefile
+++ b/security/cy2-scram/Makefile
@@ -1,6 +1,6 @@
 # $NetBSD: Makefile,v 1.9 2018/04/17 01:57:19 christos Exp $
 
-PKGNAME=	${DISTPKGNAME:S/cyrus-sasl/cy2-scram/}
+PKGNAME=	${DISTNAME:S/cyrus-sasl/cy2-scram/}
 COMMENT=	Cyrus SASL SCRAM authentication plugin
 SASL_PLUGIN=	yes
 
