--- a/security/cyrus-sasl/Makefile.common
+++ b/security/cyrus-sasl/Makefile.common
@@ -19,8 +19,7 @@
 # This Makefile fragment should be included _below_ any SASL_PLUGIN
 # definition and _above_ any CONFIGURE_ARGS definitions.
 
-DISTNAME=	cyrus-sasl-2.1.27-rc8
-DISTPKGNAME=	${DISTNAME:S/-rc/rc/}
+DISTNAME=	cyrus-sasl-2.1.27
 CATEGORIES=	security
 MASTER_SITES=	ftp://ftp.cyrusimap.org/cyrus-sasl/
 MASTER_SITES+=	https://www.cyrusimap.org/releases/
@@ -46,8 +45,6 @@ MAKE_JOBS_SAFE=		no
 USE_TOOLS+=		gmake
 
 USE_LIBTOOL=		yes
-
-WRKSRC=			${WRKDIR}/${DISTNAME:C/-rc[0-9]*$//}
 
 DOCDIR=			${PREFIX}/share/doc/cyrus-sasl
 PLUGINDIR=		${PREFIX}/lib/sasl2
@@ -85,9 +82,6 @@ CONFIGURE_ARGS+=	--without-pam
 CONFIGURE_ARGS+=	--without-saslauthd
 
 PKGCONFIG_OVERRIDE+=	libsasl2.pc.in
-
-#pre-build:
-#	 cd ${WRKSRC}/common && ${BUILD_MAKE_CMD} all
 
 # Left here as reference for patch makers...
 # clean up a bit to help package maintainer produce patch files
